blink_symbol_level=0
chrome_pgo_phase=0
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_reporting=false
enable_widevine=false
ffmpeg_branding="Chrome"
fieldtrial_testing_like_official_build=true
google_api_key=""
google_default_client_id=""
google_default_client_secret=""
is_chrome_branded=false
is_component_build=false
is_debug=false
is_official_build=true
pgo_build=false
proprietary_codecs=true
rtc_build_examples=false
rtc_use_h264=false
safe_browsing_mode=0
symbol_level=1
target_cpu="x64"
target_os="win"
thin_lto_enable_optimizations=true
treat_warnings_as_errors=false
use_jumbo_build=true
use_official_google_api_keys=false
use_openh264=true
use_thin_lto=true
use_unofficial_version_number=false
visual_studio_version="2017"
